--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
         <div class="game-container animated delay-5">
             <div class="game-title">小游戏：猜猜我的研究方向</div>
-            <p>点击按钮，看看我可能从事的计算机系统研究领域</p>
+            <p>点击按钮，看看我可能从事的计算机系统研究领域（可以连续点击哦~）</p>
             <button class="game-btn" onclick="showRandomInterest()">猜一猜</button>
             <div class="game-output" id="interest-output"></div>
         </div>
