--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
     <div id="chinese-version" class="profile-container">
         <div class="header animated">
-            <img src="lei.jpg" alt="汤磊" class="photo">
+            <img src="lei2.jpg" alt="汤磊" class="photo">
             <div>
                 <div class="name">汤磊</div>
                 <div class="education"><i class="fas fa-user-tie"></i>IEEE（国际电气电子工程师学会）CS学生会员</div>
