--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         .photo {
             width: 160px;
             height: 160px;
-            border-radius: 50%;
+            /* 移除这行 border-radius: 50%; */
             object-fit: cover;
             border: 5px solid #f0f0f0;
             margin-right: 30px;
@@ -350,7 +350,7 @@
 
     <div id="chinese-version" class="profile-container">
         <div class="header animated">
-            <img src="lei2.jpg" alt="汤磊" class="photo">
+            <img src="lei3.jpg" alt="汤磊" class="photo">
             <div>
                 <div class="name">汤磊</div>
                 <div class="education"><i class="fas fa-user-tie"></i>IEEE（国际电气电子工程师学会）CS学生会员</div>
