--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
     <div id="english-version" class="profile-container english-version">
         <div class="header animated">
-            <img src="lei.jpg" alt="Tang Lei" class="photo">
+            <img src="lei3.jpg" alt="Tang Lei" class="photo">
             <div>
                 <div class="name">Lei Tang</div>
                 <div class="education"><i class="fas fa-user-tie"></i>IEEE member of Computer Society</div>
@@ -535,8 +535,6 @@
             "嵌入式系统开发 - 让硬件与软件完美配合",
             "形式化验证 - 用数学证明程序的正确性",
             "操作系统内核开发 - 探索计算机系统的核心",
-            "编译器优化 - 让程序跑得更快",
-            "分布式系统 - 构建可扩展的软件架构",
             "计算机体系结构 - 设计下一代处理器",
             "软件可靠性工程 - 打造永不崩溃的系统"
         ];
@@ -545,8 +543,6 @@
             "Embedded Systems - Making hardware and software work perfectly together",
             "Formal Verification - Proving program correctness with mathematics",
             "OS Kernel Development - Exploring the heart of computer systems",
-            "Compiler Optimization - Making programs run faster",
-            "Distributed Systems - Building scalable software architectures",
             "Computer Architecture - Designing next-generation processors",
             "Software Reliability Engineering - Building crash-proof systems"
         ];
